--- a/Week2/Week2Oefening1/Content/Site.css
+++ b/Week2/Week2Oefening1/Content/Site.css
@@ -22,3 +22,26 @@ select,
 textarea {
     max-width: 280px;
 }
+
+/*
+    Code Kristof Colpaert
+*/
+
+.form
+{
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.form label, .form input, form select
+{
+    display: block;
+    width: 100%;
+    max-width: 100%;
+}
+
+.form input, .form select
+{
+    margin-bottom: 25px;
+}
