--- a/Week2/Week2Oefening1/Views/Catalog/Index.cshtml
+++ b/Week2/Week2Oefening1/Views/Catalog/Index.cshtml
@@ -9,7 +9,7 @@
     <article>
         <h2>@device.Name</h2>
         <p>@device.Description</p>
-        <a href="Detail/@device.Id">Meer info >></a>
+        <a href="/Catalog/Detail/@device.Id">Meer info >></a>
     </article>
 }
 
