--- a/Week2/Week2Oefening1/Views/Catalog/Index.cshtml
+++ b/Week2/Week2Oefening1/Views/Catalog/Index.cshtml
@@ -4,12 +4,34 @@
     ViewBag.Title = "Index";
 }
 
-@foreach(var device in Model)
-{
-    <article>
-        <h2>@device.Name</h2>
-        <p>@device.Description</p>
-        <a href="/Catalog/Detail/@device.Id">Meer info >></a>
-    </article>
+@{
+    int length = Model.Count;
+    for (int i = 0; i < Model.Count; i += 3)
+    {
+        <div class="row">
+            <article class="col-md-4 product">
+                <h2>@Model[i].Name</h2>
+                <p>@Model[i].Description</p>
+                <a href="/Catalog/Detail/@Model[i].Id">Meer info >></a>
+            </article>
+            @if (i + 1 < Model.Count)
+            {
+                <article class="col-md-4 product">
+                    <h2>@Model[i + 1].Name</h2>
+                    <p>@Model[i + 1].Description</p>
+                    <a href="/Catalog/Detail/@Model[i+1].Id">Meer info >></a>
+                </article>
+            }
+            
+            @if (i + 2 < Model.Count)
+            {
+                <article class="col-md-4 product product-left">
+                    <h2>@Model[i + 2].Name</h2>
+                    <p>@Model[i + 2].Description</p>
+                    <a href="/Catalog/Detail/@Model[i +2].Id">Meer info >></a>
+                </article>
+            }
+        </div>
+    }
 }
 
