--- a/Week5/Week2Oefening1/Views/Catalog/Detail.cshtml
+++ b/Week5/Week2Oefening1/Views/Catalog/Detail.cshtml
@@ -23,7 +23,7 @@
         <ul>
             <li>@Model.NewDevice.Stock</li>
         </ul>
-        <a class="home-link" href="/Catalog/">Terug naar overzicht >></a>
+        <a class="btn btn-info" href="/Catalog/">Back to list</a>
     </aside>
     @if(User.Identity.IsAuthenticated)
     {
