--- a/Week5/Week2Oefening1/Content/Site.css
+++ b/Week5/Week2Oefening1/Content/Site.css
@@ -16,16 +16,15 @@
     white-space: normal;
 }
 
-/* Set width on the form input elements since they're 100% wide by default */
-input,
-select,
-textarea {
-    max-width: 280px;
-}
-
 /*
     Code Kristof Colpaert
 */
+
+h3
+{
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
 
 .form
 {
@@ -34,21 +33,9 @@ textarea {
     margin-right: auto;
 }
 
-.form label, .form input, form select
-{
-    display: block;
-    width: 100%;
-    max-width: 100%;
-}
-
-.form input, .form select
-{
-    margin-bottom: 25px;
-}
-
 .navbar
 {
-    background-color: #7f8c8d;
+    background-color: #2c3e50;
     border-width: 0px;
 }
 
@@ -95,11 +82,4 @@ textarea {
 .product-detail aside ul li
 {
     font-style: italic;
-}
-
-.home-link
-{
-    display: inline-block;
-    margin-top: 50px;
-    margin-bottom: 50px;
 }
