--- a/Week5/Week2Oefening1/Views/Catalog/Add.cshtml
+++ b/Week5/Week2Oefening1/Views/Catalog/Add.cshtml
@@ -7,40 +7,56 @@
 @using (Html.BeginForm("Add", "Catalog", FormMethod.Post, new { @class = "form" , @enctype = "multipart/form-data"}))
 {
     <h2>General</h2>
-    
-    @Html.LabelFor(m => m.NewDevice.Name)
-    @Html.EditorFor(m => m.NewDevice.Name)
-    @Html.ValidationMessageFor(m => m.NewDevice.Name)
 
-    @Html.LabelFor(m => m.NewDevice.Description)
-    @Html.EditorFor(m => m.NewDevice.Description)
-    @Html.ValidationMessageFor(m => m.NewDevice.Description)
+    <div class="form-group">
+        @Html.LabelFor(m => m.NewDevice.Name)
+        @Html.TextBoxFor(m => m.NewDevice.Name, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.NewDevice.Name)
+    </div>
 
-    @Html.LabelFor(m => m.NewDevice.PurchasePrice)
-    @Html.EditorFor(m => m.NewDevice.PurchasePrice)
-    @Html.ValidationMessageFor(m => m.NewDevice.PurchasePrice)
+    <div class="form-group">
+        @Html.LabelFor(m => m.NewDevice.Description)
+        @Html.TextBoxFor(m => m.NewDevice.Description, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.NewDevice.Description)
+    </div>
 
-    @Html.LabelFor(m => m.NewDevice.RentingPrice)
-    @Html.EditorFor(m => m.NewDevice.RentingPrice)
-    @Html.ValidationMessageFor(m => m.NewDevice.RentingPrice)
+    <div class="form-group">
+        @Html.LabelFor(m => m.NewDevice.PurchasePrice)
+        @Html.TextBoxFor(m => m.NewDevice.PurchasePrice, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.NewDevice.PurchasePrice)
+    </div>
 
-    @Html.LabelFor(m => m.NewDevice.Stock)
-    @Html.EditorFor(m => m.NewDevice.Stock)
-    @Html.ValidationMessageFor(m => m.NewDevice.Stock)
-    
-    @Html.LabelFor(m => m.NewDevice.Image)
-    @Html.TextBoxFor(m => m.ImageFile, new { type = "file" })
-    @Html.ValidationMessageFor(m => m.ImageFile)
-    
+    <div class="form-group">
+        @Html.LabelFor(m => m.NewDevice.RentingPrice)
+        @Html.TextBoxFor(m => m.NewDevice.RentingPrice, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.NewDevice.RentingPrice)
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(m => m.NewDevice.Stock)
+        @Html.TextBoxFor(m => m.NewDevice.Stock, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.NewDevice.Stock)
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(m => m.NewDevice.Image)
+        @Html.TextBoxFor(m => m.ImageFile, new { type = "file" })
+        @Html.ValidationMessageFor(m => m.ImageFile)
+    </div>
+
     <h2>Software</h2>
-    @Html.LabelFor(m => m.NewDevice.DeviceOS)
-    @Html.ListBoxFor(m => m.NewOperatingSystems, Model.OperatingSystems)
-    @Html.ValidationMessageFor(m => m.NewDevice.DeviceOS)
+    <div class="form-group">
+        @Html.LabelFor(m => m.NewDevice.DeviceOS)
+        @Html.ListBoxFor(m => m.NewOperatingSystems, Model.OperatingSystems, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.NewDevice.DeviceOS)
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(m => m.NewDevice.DeviceFramework)
+        @Html.ListBoxFor(m => m.NewFrameworks, Model.Frameworks, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.NewDevice.DeviceFramework)
+    </div>
     
-    @Html.LabelFor(m => m.NewDevice.DeviceFramework)
-    @Html.ListBoxFor(m => m.NewFrameworks, Model.Frameworks)
-    @Html.ValidationMessageFor(m => m.NewDevice.DeviceFramework)
-    
-    <input type="submit" value="Submit" />
+    <input class="btn btn-success" type="submit" value="Submit" />
 }
 
