--- a/Week8quadris/Webshop/Content/Site.css
+++ b/Week8quadris/Webshop/Content/Site.css
@@ -16,9 +16,70 @@
     white-space: normal;
 }
 
-/* Set width on the form input elements since they're 100% wide by default */
-input,
-select,
-textarea {
-    max-width: 280px;
+/*
+    Code Kristof Colpaert
+*/
+
+h3
+{
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.form
+{
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.navbar
+{
+    background-color: #2c3e50;
+    border-width: 0px;
+}
+
+.nav li a
+{
+    color: #ffffff !important;
+}
+
+.navbar-brand
+{
+    color: #ffffff !important;
+}
+
+.product
+{
+    padding: 30px;
+}
+
+.product-detail h2
+{
+    text-align: center;
+}
+
+.product-detail img
+{
+    display: block;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    margin-left: 25%;
+}
+
+.product-detail aside
+{
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.product-detail aside p
+{
+    font-weight: bold;
+}
+
+.product-detail aside ul li
+{
+    font-style: italic;
 }
