--- a/Week8quadris/Webshop/Views/Catalog/Detail.cshtml
+++ b/Week8quadris/Webshop/Views/Catalog/Detail.cshtml
@@ -9,7 +9,7 @@
         String[] modelParts = Model.Name.Split('-');
     }
     <h2>@modelParts[0]</h2>
-    <img width="200" src="~/Images/@Model.Image" />
+    <img width="200" src="https://internetofthingswebshop.blob.core.windows.net/images/@Model.Image" />
     <aside>
         <p>Model:</p>
         <ul>
