--- a/Week9/Webshop/Views/Shared/SelectLanguage.cshtml
+++ b/Week9/Webshop/Views/Shared/SelectLanguage.cshtml
@@ -17,5 +17,6 @@
 
         }
     </select>
-    <input type="submit" value="Instellen" class="btn btn-success" />
+    <br />
+    <input type="submit" value="Instellen" class="btn btn-info" />
 }
