--- a/Week9/Webshop/Views/Shared/_Layout.cshtml
+++ b/Week9/Webshop/Views/Shared/_Layout.cshtml
@@ -23,7 +23,9 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Catalog", "Index", "Catalog")</li>
                     <li>@Html.ActionLink("Add", "Add", "Catalog")</li>
+                    <li>@Html.ActionLink("Orders", "Orders", "Basket")</li>
                 </ul>
+                @Html.Partial("_LoginPartial")
             </div>
         </div>
     </div>
