--- a/Week9/Webshop/Views/Shared/_LoginPartial.cshtml
+++ b/Week9/Webshop/Views/Shared/_LoginPartial.cshtml
@@ -19,5 +19,6 @@ else
     <ul class="nav navbar-nav navbar-right">
         <li>@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
         <li>@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
+        <li><a href="/Basket">Basket case: @Html.Action("CountBasketItems", "Basket") items</a></li>
     </ul>
 }
